<resources>
    <string name="app_name">Yum Driver</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply_here"><u>Apply here.</u></string>
    <string name="report_mishap">Report Mishap</string>
    <string name="show_direction">Show Directions</string>
    <string name="order_details">Order Details</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password*</string>
    <string name="eight_characters">8 Characters</string>
    <string name="special">1 Special</string>
    <string name="uppercase">1 Uppercase</string>
    <string name="numeric">1 Numeric</string>
    <string name="confirm_password">Confirm New Password*</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="feedback_text">Tell us what you love about the app, or what we \ncould do better.</string>
    <string name="write_message">Write your messsage here</string>
    <string name="submit">Submit</string>
    <string name="delivery_partner">Your Delivery Partner</string>
    <string name="offers">Offers that will interest you.</string>
    <string name="know_more">Tap to know more.</string>
    <string name="fill_form">FILL THIS FORM</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_restaurant_id">Enter Restaurant Id</string>
    <string name="enter_state">Enter State</string>
    <string name="interested_in">I am interested in:</string>
    <string name="part_time">Part-Time</string>
    <string name="full_time">Full-Time</string>
    <string name="i_have">I have :</string>
    <string name="bike">Bike</string>
    <string name="bicycle">Bicycle</string>
    <string name="e_cycle">E-cycle</string>
    <string name="none">None</string>
    <string name="your_delivery_friend">YOUR DELIVERY FRIEND</string>
    <string name="login">LOGIN</string>
    <string name="enter_registered_phone_number">Enter registered phone number</string>
    <string name="or_enter">or enter </string>
    <string name="otp">  OTP</string>
    <string name="log_in">Log In</string>
    <string name="havent_registered">Haven\'t registered yet? </string>
    <string name="mishap">Mishap</string>
    <string name="mishap_description">Mishap means you have gotten into an unforseen\n situation over which you have no control. Your note\n will be delivered to the vendor and the customer</string>
    <string name="choose_one">Choose one:</string>
    <string name="traffic_jam">Traffic-jam</string>
    <string name="accidental_food_spillage">Accidental food spillage</string>
    <string name="wrong_route">Wrong route</string>
    <string name="other">Other</string>
    <string name="explain_your_problem">Please explain us your problem:</string>
    <string name="performance">Performance</string>
    <string name="ratings_received">Ratings Received</string>
    <string name="order_cancelled">Orders \nCancelled</string>
    <string name="order_delivered">Orders \nDelivered</string>
    <string name="ratings">Ratings</string>
    <string name="out_of_five">OUT OF 5</string>
    <string name="thanks_for_sharing">Thanks for sharing you review</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews">No Reviews Available.</string>
    <string name="your_profile">Your Profile</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="terms">Terms</string>
    <string name="vehicle_info">Vehicles Information</string>
    <string name="vehicle_desc">Once you have changed your vehicle number, you can’t \nchange it for next 6 months. Make sure to double check it \nbefore entering.</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="save_changes">Save Changes</string>
    <string name="we_are_food_bird">We Are FoodBird</string>
    <string name="foodbird_desc">At FoodBird, we are always looking for Pick-up and \nDelivery Partners who tale exceptional pride in being a\nHunger Saviour.</string>
    <string name="why_foodbird">WHY FOODBIRD</string>
    <string name="sample_benefit1">Sample Benefit 1</string>
    <string name="sample_benefit1_desc">Monthly payout and high \nincentives</string>
    <string name="sample_benefit2">Sample Benefit 2</string>
    <string name="sample_benefit2_desc">Life insurance for you and \nyour family</string>
    <string name="sample_benefit3">Sample Benefit 3</string>
    <string name="sample_benefit3_desc">Exciting performance-related \nrewards</string>
    <string name="order_number">Order Number : </string>
    <string name="order_by">Order By : </string>
    <string name="payment_status">PAYMENT STATUS :</string>
    <string name="paid">Paid :</string>
    <string name="view_details">View Details</string>
    <string name="feedback">Thanks for your\nfeedback!</string>
    <string name="we_have_received">We have received your feedback and\nwe thank you for your time and effort.</string>
    <string name="done">Done</string>
    <string name="note">Your note has been sent</string>
    <string name="note_description">We will notify your vendor and customer\n about the delay and you will be\n contacted shortly. </string>
    <string name="okay">Okay</string>
    <string name="item_total">Item Total</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="taxes_and_charges">Taxes and Charges</string>
    <string name="amount_payble">Amount Payable</string>
    <string name="order_number_details">ORDER NUMBER:</string>
    <string name="order_on_details">ORDERD ON:</string>
    <string name="payment">PAYMENT:</string>
    <string name="phone_number_detail">PHONE NUMBER</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP again</string>
    <string name="continue1">Continue</string>
    <string name="continue_otp">Continue</string>
    <string name="thanks_for_apply">Thanks for applying!</string>
    <string name="thanks_apply">Our team will contact you through \nyour email in a day. Don’t forget \nto keep a check on it!</string>
    <string name="how_we_work">How we work</string>
    <string name="changed_password">You’ve changed your\npassword</string>
    <string name="new_password_access">Log in using your new password\nto have access to your account.</string>
    <string name="same_route_address">Same Route Orders</string>
    <string name="no_active_deliveries">You have no active deliveries right now.</string>
    <string name="no_complete_deliveries">You have no complete deliveries right now.</string>
    <string name="find_now">Find now</string>
    <string name="no_completed_deliveries">You have no completed deliveries yet.</string>
    <string name="deliveries">Deliveries</string>
    <string name="notifications">Notifications</string>
    <string name="no_notifications">No notifications yet!</string>
    <string name="online">Online</string>
    <string name="you_are_offline">You are currently offline.</string>
    <string name="no_active_orders">You have no active orders right now.</string>
    <string name="go_online">Go online to start receiving more orders and accept the delieveries.</string>
    <string name="online_notified">Remain online to be notified about new orders and to accept them.</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="about_us">About Us</string>
    <string name="support">Support</string>
    <string name="rate_us_app_store">Rate us on the App Store</string>
    <string name="logout">Logout</string>
    <string name="drop_off">DROPOFF :</string>
    <string name="time">Time : </string>
    <string name="accept_order">Accept Order</string>
    <string name="loading">Loading&#8230;</string>
    <string name="dashboard">Dashboard</string>
    <string name="history">History</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="please_enter_old_password">Please enter old password.</string>
    <string name="please_enter_new_password">Please enter new password.</string>
    <string name="please_enter_strong_password">Please enter strong password.</string>
    <string name="password_length">Please length should be minimum 8 characters.</string>
    <string name="password_confirm">Please confirm password.</string>
    <string name="password_not_match">Password not match.</string>
    <string name="all_fields">All fields required</string>
    <string name="password_not_updated">Password not updated.</string>
    <string name="maximum_words">Maximum Words:</string>
    <string name="two_hundred">200</string>
    <string name="please_enter_comment">Please enter comment.</string>
    <string name="comment">Comment</string>
    <string name="feedback_not_added">Feedback not added.</string>
    <string name="please_enter_phone">Please enter your phone number.</string>
    <string name="please_enter_valid_phone">Please enter valid phone number.</string>
    <string name="please_enter_password">Please enter your password.</string>
    <string name="please_enter_correct_otp">Please enter correct otp.</string>
    <string name="error">Error in fetching details.</string>
    <string name="otp_sent_success">Otp Sent Successfully.</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="please_select_reason">Please select reason.</string>
    <string name="please_enter_problem">Please enter your problem.</string>
    <string name="mishap_not_added">Mishap not added.</string>
    <string-array name="arrayPerformance">
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
        <item>All Time</item>
    </string-array>
    <string-array name="arrayVehicalType">
        <item>Motor Bike</item>
        <item>Car</item>
        <item>Bycycle</item>


    </string-array>
    <string-array name="arrayVehicalName">
        <item>TVS Apache</item>
        <item>Super Delex</item>
        <item>Hero Honda</item>
        <item>Pulser 150</item>


    </string-array>
    <string-array name="arrayVehicalColor">
        <item>Select Color</item>
        <item>Red</item>
        <item>Black</item>
        <item>Silver</item>
        <item>Sky</item>


    </string-array>
    <string name="thisweek">thisweek</string>
    <string name="today">today</string>
    <string name="thismonth">thismonth</string>
    <string name="alltime">alltime</string>
    <string name="total_deliveries">Total Deliveries</string>
    <string name="please_enter_name">Please enter Your Name</string>
    <string name="please_enter_phone_no">Please enter phone number</string>
    <string name="profile_details">Profile details not updated.</string>
    <string name="profile_changed">Profile photo changed successfully.</string>
    <string name="please_enter_full_name">Please enter your full name.</string>
    <string name="please_enter_rest_id">Please enter restaurant id.</string>
    <string name="camera">Camera</string>
    <string name="gallary">Gallery</string>
    <string name="need_permission">Need Permissions</string>
    <string name="permission_text">•  Yum Driver Collects the Location data to enable users to see his current location to live track his order even the app is closed or not in use.</string>
    <string name="agree">Agree</string>
   <string name="disagree">Disagree</string>
</resources>